# MCPProjects

./: README.md
simple_date_mcp_server_client/: README.md  client.py  client_llm.py  server.py
weather_fetcher_mcp_server_client/: README.md  pyproject.toml  requirements.txt  weather_api.py  weather_client.py  weather_mcpserver.py
