[project]
name = "weather-fetcher-mcp-server-client"
version = "0.1.0"
description = "Weather fetcher MCP server and client"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "weather_api.py",
    "weather_client.py",
    "weather_mcpserver.py",
]